edge-demo-charts/edge-demo/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    configmap.reloader.stakater.com/reload: "globalmainpage,localmainpage"
  labels:
    app: helloedge
  name: helloedge
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: helloedge
  template:
    metadata:
      labels:
        app: helloedge
    spec:
      containers:
      - image: library/nginx:1.17-alpine
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: globalmainpage
          subPath: index.html
      volumes:
      - name: globalmainpage
        configMap:
          name: globalmainpage
